[project]
name = "vpnm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ntgllr", email = "76962922+Ntgllr@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
vpnm = "vpnm:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
